fix: remove gap between price and button in the product block slider

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -253,8 +253,9 @@
         &-button {
             display: flex;
             align-items: center;
-            gap: $gap-xs;
+            justify-content: space-between;
             padding: 1.25rem 2.6rem;
+
 
             @include small-tablet{
                 max-width: 100%;
